--- a/sdk/communication/azure-communication-common/ci.yml
+++ b/sdk/communication/azure-communication-common/ci.yml
@@ -28,7 +28,7 @@ pr:
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
-    ServiceDirectory: communication/azure-communication-common
+    ServiceDirectory: communication
     Artifacts:
       - name: azure-communication-common
         groupId: com.azure
