--- a/sdk/keyvault/azure-security-keyvault-secrets/src/main/resources/META-INF/native-image/com.azure/azure-security-keyvault-secrets/resource-config.json
+++ b/sdk/keyvault/azure-security-keyvault-secrets/src/main/resources/META-INF/native-image/com.azure/azure-security-keyvault-secrets/resource-config.json
@@ -2,7 +2,7 @@
   "resources": {
     "includes": [
       {
-        "pattern": "azure-security-keyvault-secrets.properties"
+        "pattern": "azure-key-vault-secrets.properties"
       },
       {
         "pattern": "kvErrorStrings.properties"
